log
Sat 10 Sep 2022 01:12:45 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
bae760a
Sat 10 Sep 2022 01:18:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d1a79b4
Sat 10 Sep 2022 02:05:59 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c:43:8: error: ‘insertMap’ defined but not used [-Werror=unused-function]
   43 |   void insertMap(HashMap * map, char * key, void * value) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e8e0c0
Sat 10 Sep 2022 02:06:18 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
3068785
Sat 10 Sep 2022 02:15:11 AM UTC: 
 hashmap.c | 46 ++++------------------------------------------
 1 file changed, 4 insertions(+), 42 deletions(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2f2d92d
Sat 10 Sep 2022 02:15:47 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `createMap_test1':
test.c:(.text+0x39a): undefined reference to `createMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `createMap_test2':
test.c:(.text+0x3ca): undefined reference to `createMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `createMap_test3':
test.c:(.text+0x41a): undefined reference to `createMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: test.c:(.text+0x44d): undefined reference to `createMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `search_test1':
test.c:(.text+0xbe2): undefined reference to `searchMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `search_test2':
test.c:(.text+0xc9f): undefined reference to `searchMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `search_test3':
test.c:(.text+0xd17): undefined reference to `searchMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `erase_test1':
test.c:(.text+0xda2): undefined reference to `eraseMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `erase_test2':
test.c:(.text+0xe6f): undefined reference to `eraseMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `erase_test3':
test.c:(.text+0xed2): undefined reference to `eraseMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `first_test':
test.c:(.text+0xf2b): undefined reference to `firstMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: test.c:(.text+0xf7c): undefined reference to `firstMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `next_test':
test.c:(.text+0x1013): undefined reference to `nextMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: test.c:(.text+0x1078): undefined reference to `nextMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: test.c:(.text+0x10bc): undefined reference to `nextMap'
/nix/store/v8imx1nvyz0hgvx9cbcmh6gp4ngw3ffj-binutils-2.35.1/bin/ld: /tmp/ccYPvS78.o: in function `enlarge_test':
test.c:(.text+0x1122): undefined reference to `enlarge'
collect2: error: ld returned 1 exit status
Compilation failed
5eed83d
Sat 10 Sep 2022 02:16:19 AM UTC: 
 hashmap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
 tests:  5|4
total_score: 30/70
165b16c
Sat 10 Sep 2022 02:32:07 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:87:12: error: ‘buscar’ undeclared (first use in this function)
   87 |     return buscar;
      |            ^~~~~~
hashmap.c:87:12: note: each undeclared identifier is reported only once for each function it appears in
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:82:10: error: variable ‘elemento’ set but not used [-Werror=unused-but-set-variable]
   82 |   Pair * elemento = NULL;
      |          ^~~~~~~~
test.c:511: error: control reaches end of non-void function [-Werror=return-type]
  511 | }
      | 
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
77c2eec
